REST.assembler